--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,8 @@ body {
   max-width: 45px;
   max-height: 45px;
   cursor: pointer;
+  z-index:-1 ;
+  
 }
 
 .error {
@@ -22,10 +24,13 @@ body {
 
 .marker.red path {
   fill: #f05305;
+  z-index: -10;
 }
 
 .marker.yellow path {
   fill: #F3B73E;
+  z-index: -10;
+
 }
 
 .popup {
@@ -34,14 +39,18 @@ body {
   font-family: Arial, sans-serif;
   border: 2px solid #fff;
   border-radius: 20px/50px;
+  z-index: 3;
 }
 
 .popup img {
-  height: 200px;
-  width: auto;
-  text-align: center;
-  margin: 0 auto;
-  display: block;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+     z-index: 3;
 }
 
 .entry-form label,
